--- a/ArcGisExportApi/ArcGisExportApi.csproj
+++ b/ArcGisExportApi/ArcGisExportApi.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DocXCore" Version="1.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
