--- a/ArcGisExportApi/ArcGisExportApi.csproj
+++ b/ArcGisExportApi/ArcGisExportApi.csproj
@@ -10,8 +10,9 @@
 
   <ItemGroup>
     <PackageReference Include="DocXCore" Version="1.0.4" />
+    <PackageReference Include="FreeSpire.Doc" Version="6.3.0" />
+    <PackageReference Include="iTextSharp" Version="5.5.13" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Spire.Doc" Version="6.10.6" />
   </ItemGroup>
 
 </Project>
