added iHostEnv for content root, template to output folder, add template method

--- a/ArcGisExportApi/ArcGisExportApi.csproj
+++ b/ArcGisExportApi/ArcGisExportApi.csproj
@@ -15,4 +15,10 @@
     <PackageReference Include="Spire.Doc" Version="6.10.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Templates\pgzTemplate.docx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
