--- a/ArcGisExportApi/ArcGisExportApi.csproj
+++ b/ArcGisExportApi/ArcGisExportApi.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="DocXCore" Version="1.0.4" />
     <PackageReference Include="iTextSharp" Version="5.5.13" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.6" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Spire.Doc" Version="6.10.6" />
   </ItemGroup>
