--- a/ArcGisExportApi/Properties/launchSettings.json
+++ b/ArcGisExportApi/Properties/launchSettings.json
@@ -4,8 +4,7 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:58366",
-      "sslPort": 44342
+      "applicationUrl": "http://localhost:58366"
     }
   },
   "profiles": {
