--- a/ArcGisExportApi/ArcGisExportApi.csproj
+++ b/ArcGisExportApi/ArcGisExportApi.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="iTextSharp" Version="5.5.13" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.6" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="PDFsharp" Version="1.32.3057" />
     <PackageReference Include="Spire.Doc" Version="6.10.6" />
   </ItemGroup>
 
